--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "homepage": "https://lzaghi.github.io/pixels-art",
   "devDependencies": {
+    "cypress": "4.0.2",
+    "cypress-multi-reporters": "1.2.4",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-plugin-editorconfig": "2.1.3",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-sonarjs": "0.5.0",
-    "stylelint": "13.8.0",
-    "stylelint-config-standard": "20.0.0",
-    "cypress": "4.0.2",
-    "cypress-multi-reporters": "1.2.4",
     "minimist": "1.2.3",
     "mocha": "7.0.1",
     "mochawesome": "4.1.0",
     "mochawesome-merge": "4.0.0",
-    "mochawesome-report-generator": "4.1.0"
+    "mochawesome-report-generator": "4.1.0",
+    "stylelint": "13.8.0",
+    "stylelint-config-standard": "20.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -25,6 +25,7 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
-    "eslint-config-trybe-fundamentals": "1.1.0"
+    "eslint-config-trybe-fundamentals": "1.1.0",
+    "gh-pages": "^5.0.0"
   }
 }
